--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.6.3",
     "react": "^18.2.0",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0"
   },
