--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
