--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-autocomplete": "^1.8.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.18.0",
     "react-table": "^7.8.0"
   },
