--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "faker": "^5.5.3",
+    "mongoose": "^8.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.3",
     "react": "^18.2.0",
